Closed
Bug 226141
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for tree files
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file, 1 obsolete file)
|
12.10 KB,
patch
|
janv
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=142#137
Deref-error: "mTransitionTable"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=148#143
Deref-error: "mTransitionTable"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=154#149
Deref-error: "currState"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=155#150
Deref-error: "mTransitionTable"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=161#156
Deref-error: "mTransitionTable"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=180#175
Deref-error: "mCache"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp&rev=1.192&mark=3483#3478
Deref-error: "col"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=116#111
Deref-error: "range"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=162#157
Deref-error: "newRange"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=180#175
Deref-error: "newRange"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=192#187
Deref-error: "newRange"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=377#372
Deref-error: "mFirstRange"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/xul/base/src/tree/src/nsTreeSelection.cpp&rev=1.34&mark=451#446
Deref-error: "range"
Attachment #135868 -
Flags: superreview?(roc)
Attachment #135868 -
Flags: review?(varga)
Why are you just ignoring errors returned by RemoveRange()?
Attachment #135868 -
Flags: superreview?(roc)
Attachment #135868 -
Flags: review?(varga)
Attachment #135868 -
Attachment is obsolete: true
Attachment #135880 -
Flags: superreview?(roc)
Attachment #135880 -
Flags: review?(varga)
Attachment #135880 -
Flags: superreview?(roc) → superreview+
Comment 4•22 years ago
|
||
Comment on attachment 135880 [details] [diff] [review]
thanks roc, return error from RemoveRange
looks good
r=varga
Attachment #135880 -
Flags: review?(varga) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•