Bug 226141 DRefTool analysis for tree files r=varga sr=roc